# cerberus-sdk-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  drift.yml  release.yml
cerberus_compliance/: __init__.py  auth.py  client.py  errors.py  retry.py
cerberus_compliance/resources/: __init__.py  _base.py  admin_api_keys.py  art12.py  art20.py  banking.py  comunicaciones.py  copilot.py  diario.py  dictamenes.py  entities.py  equity.py  esg.py  exports.py  financials.py  fondos.py  graph.py  grupos.py  hechos.py  indicadores.py  insider.py  ipsa.py  kyb.py  legal.py  lei.py  material_events.py  normativa.py  normativa_consulta.py  normativa_historic.py  norms.py  opas.py  persons.py  ran.py  ratings.py  registries.py  regulations.py  regulatory_impact.py  regulatory_subscriptions.py  rentas.py  resoluciones.py  (+11 more)
docs/: HANDOFF_A.md  HANDOFF_P51_A.md  auth.md  errors.md  pagination.md  quickstart.md
examples/: admin_api_keys_introspect.py  async_concurrent_lookups.py  cursor_pagination.py  entities_lookup.py  equity_prices.py  error_handling.py  exports_bulk_csv.py  indicadores_basic.py  kyb_quickstart.py  monitor_portfolio.py  normativa_consulta_basic.py  normativa_explore.py  persons_profile.py  regulations_search.py  rpsf_explore.py  sanctions_browse.py  sanctions_cross_reference.py  sasb_topics_browse.py  webhook_handler.py  webhooks_subscribe_and_verify.py
examples/notebooks/: 01-kyb-quickstart.ipynb  02-enel-full-profile.ipynb  03-sdk-grand-tour.ipynb  04-top10-bancos-chile.ipynb  06-fintechs-agfs-chile.ipynb
scripts/: check_sdk_drift.py  codegen.sh  publish.sh
tests/: conftest.py  test_auth.py  test_base_resource.py  test_client.py  test_errors.py  test_public_api.py  test_retry.py  test_sdk_drift.py
tests/fixtures/: openapi-sample.json
tests/integration/: test_live_prod.py  test_live_staging.py
tests/resources/: test_admin_api_keys.py  test_art12.py  test_art20.py  test_banking.py  test_comunicaciones.py  test_copilot.py  test_diario.py  test_dictamenes.py  test_entities.py  test_equity.py  test_esg.py  test_exports.py  test_financials.py  test_fondos.py  test_graph.py  test_grupos.py  test_hechos.py  test_indicadores.py  test_insider.py  test_ipsa.py  test_kyb.py  test_legal.py  test_lei.py  test_material_events.py  test_normativa.py  test_normativa_consulta.py  test_normativa_historic.py  test_norms.py  test_opas.py  test_persons.py  test_ran.py  test_ratings.py  test_registries.py  test_regulations.py  test_regulatory_impact.py  test_regulatory_subscriptions.py  test_rentas.py  test_resoluciones.py  test_rpsf.py  test_sanctions.py  (+8 more)
