[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cerberus-compliance"
version = "0.6.0"
description = "Official Python SDK for the Cerberus Compliance API (Chile RegTech)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "José Ignacio Concha Araya", email = "soypro52@gmail.com" },
]
maintainers = [
    { name = "Cerberus Soluciones", email = "soypro52@gmail.com" },
]
keywords = [
    "cerberus",
    "compliance",
    "regtech",
    "chile",
    "cmf",
    "kyb",
    "aml",
    "sanctions",
    "sdk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.10",
    "openapi-python-client>=0.21",
    "build>=1.2",
    "twine>=5.0",
]
docs = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

[project.urls]
Homepage = "https://github.com/l0rdbarcsacs/cerberus-sdk-python"
Documentation = "https://github.com/l0rdbarcsacs/cerberus-sdk-python#readme"
Repository = "https://github.com/l0rdbarcsacs/cerberus-sdk-python"
Issues = "https://github.com/l0rdbarcsacs/cerberus-sdk-python/issues"
Changelog = "https://github.com/l0rdbarcsacs/cerberus-sdk-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["cerberus_compliance"]

[tool.hatch.build.targets.sdist]
include = [
    "cerberus_compliance",
    "tests",
    "scripts",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=cerberus_compliance",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:respx.*",
]

[tool.coverage.run]
branch = true
source = ["cerberus_compliance"]
omit = [
    "cerberus_compliance/_generated/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
    "\\.\\.\\.",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["cerberus_compliance/_generated"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific
    "ASYNC",
    "T20",  # no print
    "PIE",
    "PT",   # pytest style
]
ignore = [
    "E501",  # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "PT011"]
# Examples are runnable CLI scripts — `print()` is the documented output path,
# not a lingering debug statement. Suppressing the `T20` category keeps the
# example bodies copy-paste-ready without `# noqa` comments sprinkled on every
# line. Also allow `typing.Any` inside examples: design partners read these as
# flat scripts, not strictly-typed library code. Notebooks are documentation
# with inline output — they need every rule the scripts get, plus a few more
# that make sense for narrative code (unused imports from pprint/datetime,
# hardcoded RUTs as string literals, f-strings without interpolation in
# section headers, etc).
"examples/**/*.py" = ["T201", "T203"]
"examples/notebooks/**/*.ipynb" = ["T201", "T203", "F401", "F541", "E402", "E501", "E702", "B007"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_decorators = true
no_implicit_reexport = false
plugins = ["pydantic.mypy"]
exclude = [
    "cerberus_compliance/_generated/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = ["responses.*", "respx.*"]
ignore_missing_imports = true
